@@ -3,7 +3,7 @@
 
 <html lang=en>
  <head>
-  <meta http-equiv='Content-Type' content='text/html; charset=iso-8859-1'>
+  <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
   <title></title></head>
  <body>
   <div><a name='heapyc.module-32-heapyc'>
@@ -829,4 +829,4 @@ not already sorted.  The flag is currently used from Python to see if
 the nodegraph has been used at least once after update, so that it
 will not be cleared too early.
 </dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Oct 18 21:10:48 2006</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Mon Apr  7 12:39:46 2008</div></body></html>
